--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -20,8 +20,11 @@
 /* Each group: left, center, right */
 .nav-group {
   display: flex;
+  justify-content: space-evenly;
+  align-items: center;
   list-style: none;
   gap: 30px;
+  width: 100%;
   padding: 0;
   margin: 0;
 }
