--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -11,7 +11,7 @@
 .nav-container {
   display: grid;
   grid-template-columns: repeat(5, 1fr); /* Even spacing for 5 items */
-  max-width: 100%; /* Full width */
+  max-width: 1200px;
   margin: 0 auto;
   align-items: center;
   text-align: center;
