--- a/src/Pages/BackgroundPage/BackgroundPage.css
+++ b/src/Pages/BackgroundPage/BackgroundPage.css
@@ -2,7 +2,11 @@
     display: flex;
     flex-direction: column;
     padding-top: 50px;
-}
+    max-width: 1200px;
+    margin: 0 auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
 
 .career-timeline-button-container {
     align-self: center;
