--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -13,7 +13,7 @@
 
 .nav-container {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   align-items: center;
   flex-wrap: nowrap;
   max-width: 1500px;
@@ -22,6 +22,7 @@
   width: 100%;
   height: 100%;
   gap: 2rem;
+  padding-left: 2rem;
 }
 
 .nav-item {
