--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -13,16 +13,16 @@
 
 .nav-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   flex-wrap: nowrap;
-  max-width: 1500px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0 1rem;
   width: 100%;
   height: 100%;
-  gap: 2rem;
-  padding-left: 2rem;
+  position: relative;
+  left: -20px;
 }
 
 .nav-item {
