--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .page-content {
     max-width: 1200px;
     margin: 0 auto;
-    padding-top: 200px !important;
-  }
+    padding-top: 200px 1rem 0;
