--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -13,6 +13,7 @@
 
 .nav-container {
   display: flex;
+  gap: 2rem;
   justify-content: space-between;
   align-items: center;
   flex-wrap: nowrap;
@@ -22,7 +23,6 @@
   width: 100%;
   height: 100%;
   position: relative;
-  left: -117px;
 }
 
 .nav-item {
