--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -13,16 +13,15 @@
 
 .nav-container {
   display: flex;
-  gap: 2rem;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-wrap: nowrap;
+  gap: 2rem; 
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 1rem;
   width: 100%;
   height: 100%;
-  position: relative;
 }
 
 .nav-item {
