--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -67,6 +67,13 @@ body, html {
     box-shadow: 0 4px 12px rgba(255, 255, 255, 0.2);
     transition: box-shadow 0.3s ease;
 }
+
+.homepage-inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
   
 
 /* Name */
