--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -10,6 +10,9 @@ body, html {
     flex-direction: column;
     align-items: center;
     padding: 10px 20px 40px 20px;
+    margin: 0 auto;
+    max-width: 100%;
+    width: 100%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: white;
     text-align: center;
