--- a/src/Pages/BackgroundPage/BackgroundPage.css
+++ b/src/Pages/BackgroundPage/BackgroundPage.css
@@ -42,6 +42,14 @@
     box-shadow: 0px 4px 30px rgba(0, 255, 255, 0.1);
 }
 
+.education-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+
 .education-card-head {
     display: flex;
     justify-content: space-between;
