--- a/src/Components/CareerTimeline.css
+++ b/src/Components/CareerTimeline.css
@@ -1,6 +1,6 @@
 .career-timeline-page-container {
     max-width: 1000px;
-    margin: 0 auto;
+    margin: auto;
 }
 
 .career-timeline-button-container {
