--- a/src/Components/CareerTimeline.css
+++ b/src/Components/CareerTimeline.css
@@ -1,6 +1,8 @@
 .career-timeline-page-container {
-    max-width: 1000px;
-    margin: auto;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .career-timeline-button-container {
