--- a/src/Pages/BackgroundPage/BackgroundPage.css
+++ b/src/Pages/BackgroundPage/BackgroundPage.css
@@ -42,6 +42,11 @@
     box-shadow: 0px 4px 30px rgba(0, 255, 255, 0.1);
 }
 
+h2 {
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+  }
+
 .education-container {
     display: flex;
     flex-direction: column;
