Fixed the CareerTimeline

--- a/src/Components/CareerTimeline.css
+++ b/src/Components/CareerTimeline.css
@@ -3,6 +3,7 @@
     justify-content: center;
     width: 100%;
     margin: 0 auto;
+    flex-direction: column;
 }
 
 .career-timeline-button-container {
