--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -25,6 +25,16 @@
   transform: translateX(-23px);
 }
 
+.hamburger {
+    font-size: 1.8rem;
+    margin-left: 20px;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+    display: none;
+}
+
 .nav-item {
   text-align: center;
 }
@@ -42,4 +52,48 @@
   color: #66ccff;
   border-bottom: 2px solid #66ccff;
   padding-bottom: 2px;
+}
+
+.nav-links{
+    display: flex;
+    gap: 4rem;
+    align-items: center;
+    height: 100%;
+}
+
+@media (max-width: 768px){
+    .hamburger {
+        display: flex;
+    }
+
+  .nav-container {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+
+  .nav-links {
+    display: none;
+    gap: 4rem;
+    align-items: center;
+    height: 100%;
+  }
+
+  .nav-linksopen {
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    background-color: #2e2e2e;
+    position: absolute;
+    top: 60px;
+    padding: 1rem;
+    border-top: 1px solid #444;
+    margin-left: 7px;
+  }
+
+  .nav-item {
+    width: 100%;
+  }
+
 }
